@@ -31,31 +31,41 @@ public class ReflectionUtils {
         }
     }
 
-    public static <T> List<Field> getAllFields(Class<T> kclass) {
-        Class<? super T> cur = kclass;
-        var fields = new ArrayList<Field>();
-        while (cur != null) {
-            fields.addAll(Arrays.asList(cur.getDeclaredFields()));
-            cur = cur.getSuperclass();
+    public static List<Field> getAllFields(Class<?> kclass) {
+        List<Field> fields = new ArrayList<>();
+        Class<?> currentClass = kclass;
+
+        while (currentClass != null) {
+            // Add declared fields of the current class
+            // The difference between getFields() and getDeclaredFields() is that getFields() returns only public fields
+            // while getDeclaredFields() returns all fields, regardless of their access modifier
+            // The difference between List.of() and Arrays.asList() is that List.of() returns an immutable list
+            // while Arrays.asList() returns a mutable list
+            fields.addAll(Arrays.asList(currentClass.getDeclaredFields()));
+            // Move to the superclass
+            currentClass = currentClass.getSuperclass();
         }
+
         return fields;
     }
 
     public static Map<String, Object> mapValues(Object object, String... fields) {
-        var listFields = getAllFields(object.getClass());
+//        var listFields = getAllFields(object.getClass());
+//        List<Field> allFields = getAllFields(YourClass.class);
+        List<Field> allFields = getAllFields(object.getClass());
         var map = new HashMap<String, Object>();
         for (String field : fields) {
-            map.put(field, getValue(getField(listFields, field), object));
+            map.put(field, getValue(getField(allFields, field), object));
         }
         return map;
     }
 
     public static void copyData(Object from, Object to, boolean ignoreEmptyOrNull, String ...fields) {
         if (from == null || to == null) return;
-        var fromFields = getAllFields(from.getClass());
-        var toFields = getAllFields(to.getClass());
+        List<Field> fromFields = getAllFields(from.getClass());
+        List<Field> toFields = getAllFields(to.getClass());
         for (String fieldName : fields) {
-            var fromF = getField(fromFields, fieldName);
+            Field fromF = getField(fromFields, fieldName);
             var valueToSet = getValue(fromF, from);
             if (ignoreEmptyOrNull) {
                 if (valueToSet == null) continue;
